// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`должен рендерить страницу без данных с плейсхолдером, если выбран текущий день 1`] = `
<div>
  <Connect(Sticky)>
    <div
      className="WalkIn__filters"
    >
      <Memo(WalkInFilters)
        dateLimits={
          Object {
            "from": "2015-01-12",
            "to": "2015-01-12",
          }
        }
        isVisibleDescriptionButton={false}
        onChange={[Function]}
      />
      <LoaderBar
        className="WalkIn__loader"
        color="red"
        isLoading={false}
      />
    </div>
  </Connect(Sticky)>
  <div
    className="WalkIn__page"
  >
    <div
      className="WalkIn__header"
    >
      <Memo(WalkInHeader)
        isVisibleDescription={true}
        onCloseDescription={[Function]}
        visits={
          Object {
            "confirmed_visits": 460,
            "unconfirmed_visits": 736,
          }
        }
      />
    </div>
    <div
      className="WalkIn__noDataPlaceholder"
    >
      <WalkInNoDataPlaceholder
        routeParams={Object {}}
      />
    </div>
  </div>
</div>
`;

exports[`должен рендерить страницу без таблицы эвентов, если нет эвентов 1`] = `
<div>
  <Connect(Sticky)>
    <div
      className="WalkIn__filters"
    >
      <Memo(WalkInFilters)
        dateLimits={
          Object {
            "from": "2019-10-01",
            "to": "2019-10-28",
          }
        }
        isVisibleDescriptionButton={false}
        onChange={[Function]}
      />
      <LoaderBar
        className="WalkIn__loader"
        color="red"
        isLoading={false}
      />
    </div>
  </Connect(Sticky)>
  <div
    className="WalkIn__page"
  >
    <div
      className="WalkIn__header"
    >
      <Memo(WalkInHeader)
        isVisibleDescription={true}
        onCloseDescription={[Function]}
        visits={
          Object {
            "confirmed_visits": 460,
            "unconfirmed_visits": 736,
          }
        }
      />
    </div>
    <div
      className="WalkIn__totalDiagram"
    >
      <WalkInTotalStats
        data={
          Array [
            Object {
              "date": "2019-01-01",
              "index": 0,
              "label": "20",
              "products": Array [
                Object {
                  "color": "#C1B8E8",
                  "label": "20",
                  "name": "Посетители",
                  "sum": 20,
                },
              ],
            },
            Object {
              "date": "2019-01-02",
              "index": 1,
              "label": "60",
              "products": Array [
                Object {
                  "color": "#C1B8E8",
                  "label": "60",
                  "name": "Посетители",
                  "sum": 60,
                },
              ],
            },
          ]
        }
      />
    </div>
    <div
      className="WalkIn__legend"
    >
      <WalkInCollapseBlock
        isExpanded={false}
        onCollapse={[Function]}
        onExpand={[Function]}
      >
        <div
          className="WalkIn__legendContent WalkIn__legendContent_collapsed"
        >
          <div
            className="WalkIn__portraitLegend"
          >
            <WalkInPortraitLegend
              isExpanded={false}
              visits={
                Object {
                  "confirmed_visits": 460,
                  "unconfirmed_visits": 736,
                }
              }
            />
          </div>
        </div>
      </WalkInCollapseBlock>
    </div>
  </div>
</div>
`;
